# symfit-kernel

./: claude_syscall  claude_syscall.c  claude_syscall2.c  claude_syscall3.c  claude_syscall4  claude_syscall4.c  claude_syscall5  claude_syscall5.c  claude_syscall5c  claude_syscall5c.c  hello_nonsym.json  hello_sym.json  kernel_syscall_test  mmap_test.json  print.json  printq.json  printq2.json  printq2_wnotes.json  printq3.json  syscall-64.h  syscall_test.json  syscall_test2.json  test  test.c  test.txt  test6.json  test6q.json
accel/tcg/: tcg-runtime-sym.c
include/tcg/: tcg.h
linux-user/: syscall.c
output/: 000002  000004  000005  000006  000007  000008  000010  000011  000012  000013  000014  000015  000016  000017  000018  000019  000020  000021  000022  000023  000024  000025  000129  000139  000140  000143
output/constraint/: constraint_set
run/: .gdbinit  .ninja_log  Makefile  Makefile.mtest  Makefile.ninja  Makefile.prereqs  README.md  build.ninja.stamp  config-host.h  config-host.mak  config.status  launch.sh  python  run_vng.sh  scripts  x86_64-linux-user-config-target.h  x86_64-softmmu-config-devices.h  x86_64-softmmu-config-devices.mak  x86_64-softmmu-config-target.h
run/contrib/plugins/: Makefile  config-host.mak
run/docs/: config
run/linux-headers/: asm
run/meson-info/: intro-benchmarks.json  intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
run/meson-logs/: meson-log.txt
run/meson-private/: cmd_line.txt
run/meson-uninstalled/: libfdt-uninstalled.pc
run/pc-bios/optionrom/: Makefile
run/pc-bios/s390-ccw/: Makefile
run/pc-bios/vof/: Makefile
run/qemu-bundle/usr/local/include/: fdt.h  libfdt.h  libfdt_env.h  qemu-plugin.h
run/qemu-bundle/usr/local/lib/x86_64-linux-gnu/pkgconfig/: libfdt.pc
run/qemu-bundle/usr/local/libexec/: qemu-bridge-helper
run/qemu-bundle/usr/local/share/applications/: qemu.desktop
run/qemu-bundle/usr/local/share/qemu/: bamboo.dtb  canyonlands.dtb  edk2-aarch64-code.fd  edk2-arm-code.fd  edk2-arm-vars.fd  edk2-i386-code.fd  edk2-i386-secure-code.fd  edk2-i386-vars.fd  edk2-licenses.txt  edk2-x86_64-code.fd  edk2-x86_64-secure-code.fd  efi-e1000.rom  efi-e1000e.rom  efi-eepro100.rom  efi-ne2k_pci.rom  efi-pcnet.rom  efi-rtl8139.rom  efi-virtio.rom  efi-vmxnet3.rom  hppa-firmware.img  hppa-firmware64.img  openbios-ppc  openbios-sparc32  openbios-sparc64  palcode-clipper  petalogix-ml605.dtb  petalogix-s3adsp1800.dtb  pxe-e1000.rom  pxe-eepro100.rom  pxe-ne2k_pci.rom  pxe-pcnet.rom  pxe-rtl8139.rom  pxe-virtio.rom  qboot.rom  qemu_vga.ndrv  s390-ccw.img  s390-netboot.img  skiboot.lid  trace-events-all  u-boot.e500
run/qemu-bundle/usr/local/share/qemu/firmware/: 50-edk2-i386-secure.json  50-edk2-x86_64-secure.json  60-edk2-aarch64.json  60-edk2-arm.json  60-edk2-i386.json  60-edk2-x86_64.json
run/qemu-bundle/usr/local/share/qemu/keymaps/: ar  bepo  cz  da  de  de-ch  en-gb  en-us  es  et  fi  fo  fr  fr-be  fr-ca  fr-ch  hr  hu  is  it  ja  lt  lv  mk  nl  no  pl  pt  pt-br  ru  sl  sv  th  tr
run/subprojects/symcc-rt/: fileAPI.json  meson.build
run/subprojects/symcc-rt/__CMake_build/: CMakeCache.txt  CMakeMesonToolchainFile.cmake  build.ninja  cmake_install.cmake  cmake_trace.txt
run/subprojects/symcc-rt/__CMake_build/.cmake/api/v1/query/client-meson/: query.json
run/subprojects/symcc-rt/__CMake_build/.cmake/api/v1/reply/: cache-v2-3a03ff3d312624ba2a84.json  cmakeFiles-v1-5dadef6541e7a1a98f9b.json  codemodel-v2-cc1898b19a085b34dd3d.json  directory-src.backends.qsym-Debug-c76bedb74e89f99f5ab1.json  index-2025-10-27T15-35-51-0033.json  target-SymCCRtObj-Debug-b186562c3dfb39389e11.json  target-SymCCRtShared-Debug-84fc115786eb9ecaa674.json  target-SymCCRtStatic-Debug-aa06941802054cc291f9.json  target-acc_gen-Debug-fb43ebb96338c67885a8.json  target-intrinsics_gen-Debug-2fc11853ad8fbba7f0ce.json  target-omp_gen-Debug-b779dedb2248eb846d7a.json
run/subprojects/symcc-rt/__CMake_build/src/backends/qsym/: cmake_install.cmake
run/tests/: avocado  data
run/tests/qemu-iotests/: Makefile  check
run/tests/tcg/: config-host.mak
run/tests/tcg/x86_64-linux-user/: Makefile  config-cc.mak  config-target.mak
run/tests/tcg/x86_64-softmmu/: config-target.mak
subprojects/symcc-rt/src/: LibcWrappers.cpp  RuntimeCommon.cpp
subprojects/symcc-rt/src/backends/qsym/qsym/qsym/pintool/: afl_trace_map.cpp  memory.cpp  solver.cpp  solver.h
tcg/: tcg.c
